# neutron-capture-graphene-boron-geant4

./: CMakeLists.txt  README.md  main.cc  main.cc~
include/: CaptureHit.hh  CaptureSD.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunAction.hh~  TransmittedSD.hh
macros/: vis1.mac
src/: ActionInitialization.cc  ActionInitialization.cc~  CaptureHit.cc  CaptureSD.cc  CaptureSD.cc~  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  SteppingAction.cc~  TransmittedSD.cc  TransmittedSD.cc~
